# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "acond"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#prost = "0.11.2"
#tonic = "0.8.2"
#tokio-vsock = "0.4.0"
actix-web = { version = "4.5.1", default-features = false, features = ["openssl"] }
actix-multipart = "0.6.1"
actix-web-lab = "0.20.2"
tokio = { version = "1.17.0", default-features = false, features = ["rt", "fs", "io-std", "signal"] }
futures = "0.3.21"
prctl = "1.0.0"
nix = { version = "0.26.2", default-features = false, features = ["fs", "mman", "mount", "poll", "ioctl", "process", "reboot", "term", "sched", "socket", "user"] }
libc = "0.2.121"
anyhow = { version = "1.0.56", default-features = false }
openssl = "0.10.66"
data-encoding = { version = "2.3.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
bincode = "1.3.3"
tar = "0.4.38"
lazy_static = "1.3.0"
scopeguard = "1.0.0"
rustyline = "10.1.1"
walkdir = "2.3.2"
tokio-send-fd = "0.9.3"
openidconnect = "3.5.0"
chrono = "0.4.38"
env_logger = "0.11.3"
log = "0.4.21"

[dev-dependencies]
# unit test
tempfile = "3.1.0"

[build-dependencies]
tonic-build = "0.8.2"

[features]
full = ["interactive"]
interactive = []

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
